# LogTrackerApp

./: Cargo.toml  README.md
.github/workflows/: release.yml
graphql/: character.graphql  rate_limit.graphql  schema.graphql
gui/: log_tracker_app.glade
src/: main.rs  updater.rs
