[package]
name = "log_tracker_app"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.17.0"
mlua = { version = "0.8.8", features = ["lua54", "serialize"] }
serde = "1.0.156"
serde_json = "1.0.94"
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"] }
oauth2 = "4.3.0"
reqwest = "0.11.14"
log = "0.4.17"
env_logger = "0.10.0"