[package]
name = "log_tracker_app"
version = "1.2.1"
edition = "2021"

[dependencies]
eframe = "0.21.3"
tinyfiledialogs = "3.9.1"
mlua = { version = "0.8.8", features = ["luau", "serialize"] }
serde = "1.0.156"
serde_json = "1.0.94"
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"] }
oauth2 = "4.3.0"
reqwest = "0.11.14"
chrono = "0.4.24"
home = "0.5.4"
image = "0.24.5"
log = "0.4.17"
env_logger = "0.10.0"
